# picocalc_lua

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  LICENSE  LUA.md  README.md  TODO  corelua.c  corelua.h  fs_wrapper.c  fs_wrapper.h  lua_wrapper.c  lua_wrapper.h  picolua.c  version.cmake
docs/: API.md  Getting Started.md
drivers/: CMakeLists.txt  default_font.h  draw.c  draw.h  font.h  fs.c  fs.h  keyboard.c  keyboard.h  lcd.c  lcd.h  lcd_lut.h  make_lut.py  multicore.c  multicore.h  psram.c  psram.h  samples.h  sound.c  sound.h  term.c  term.h
lua-5.4.6/src/: CMakeLists.txt  lauxlib.c  loadlib.c
lua-5.4.8/: CMakeLists.txt  lauxlib.c  loadlib.c
modules/: CMakeLists.txt  draw.c  draw.h  fs.c  fs.h  modules.c  modules.h  sys.c  sys.h  term.c
picolua-api/: CMakeLists.txt  draw.c  draw.h  fs.c  fs.h  modules.c  sound.c  sound.h  sys.c  sys.h  term.c  term.h
sd_files/: main.lua
sd_files/cc/: edit.lua
sd_files/lua/: asteroids.lua  boxworld.lua  bubble.lua  mandelbrot.lua  piano.lua  speedtest.lua
submodules/kilo/: CMakeLists.txt  kilo.c  kilo.h
submodules/lua-5.4.8/: loadlib.c
